using UnityEngine;

public static class Constants
{
    //Animator
    public const string Speed = "Speed";
    public const string IsGround = "IsGround";
    public const string VerticalVelocity = "VerticalVelocity";

    //Input
    public const string Horizontal = "Horizontal";
    public const string Jump = "Jump";
}