using UnityEngine;

public static class Constants
{
    public class CharacterAnimation
    {
        public const string Speed = "Speed";
        public const string Attack = "Attack";
        public const string Hit = "Hit";
        public const string IsDead = "IsDead";
        public const string IsGround = "IsGround";
        public const string VerticalVelocity = "VerticalVelocity";
    }

    public class Movement
    {
        public const string Horizontal = "Horizontal";
        public const string Jump = "Jump";
    }
}